--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json -o",
     "build": "ng build --prod",
-    "test": "ng test --code-coverage",
+    "test": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -24,6 +24,7 @@
     "@angular/router": "~11.2.8",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.7",
+    "sweetalert2": "^11.4.4",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -47,6 +48,7 @@
     "protractor": "~7.0.0",
     "protractor-beautiful-reporter": "^1.3.6",
     "ts-node": "~9.1.1",
+    "tsconfig-paths": "^3.12.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
   }
