--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
       "@producto/*": [
         "src/app/feature/producto/*"
       ],
+      "@comparendo/*": [
+        "src/app/feature/comparendo/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
       ]
